# cmake-sm-extension

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: hl2sdk.cmake  sourcemod.cmake
resource/scripting/include/: example-ext.inc
src/: CMakeLists.txt  extension.cpp  extension.hpp  smsdk_config.h
